feat: Allow selection of the update provider
